[gd_scene load_steps=18 format=3 uid="uid://di5q0vgb2yabl"]

[ext_resource type="StyleBox" uid="uid://b6my5kblcuosw" path="res://ChatRoom/Assets/TransparentBackground.tres" id="1_fxul4"]
[ext_resource type="Script" path="res://MainMenu/main_menu.gd" id="1_v1vy5"]
[ext_resource type="FontFile" uid="uid://cnvc5l2ay5mii" path="res://Fonts/ChakraPetch-Bold.ttf" id="2_4leyl"]
[ext_resource type="Shader" path="res://ChatRoom/Assets/ChatRoom.gdshader" id="2_np0aq"]
[ext_resource type="StyleBox" uid="uid://bx4ev60dxnmk7" path="res://MainMenu/CyanMainMenuFlatBox.tres" id="3_g5dm6"]
[ext_resource type="StyleBox" uid="uid://cv7wlfnrwx10v" path="res://OperationRoom/Assets/CyanFlatBox.tres" id="3_o3lbl"]
[ext_resource type="AudioStream" uid="uid://fgk6fxakxw0i" path="res://Sounds/SFX/Click.wav" id="4_piooc"]
[ext_resource type="LabelSettings" uid="uid://v108naiofr1b" path="res://MainMenu/MainMenuTitle.tres" id="5_dt64h"]

[sub_resource type="Gradient" id="Gradient_4qedq"]

[sub_resource type="FastNoiseLite" id="FastNoiseLite_lqokq"]
noise_type = 2
frequency = 0.1199
fractal_octaves = 8
cellular_distance_function = 3
domain_warp_enabled = true
domain_warp_frequency = 10.0
domain_warp_fractal_type = 2

[sub_resource type="NoiseTexture2D" id="NoiseTexture2D_meh0y"]
color_ramp = SubResource("Gradient_4qedq")
noise = SubResource("FastNoiseLite_lqokq")

[sub_resource type="ShaderMaterial" id="ShaderMaterial_jlewn"]
shader = ExtResource("2_np0aq")
shader_parameter/_isActive = true
shader_parameter/maxValue = 0.2
shader_parameter/_aquarium = SubResource("NoiseTexture2D_meh0y")

[sub_resource type="Gradient" id="Gradient_agus2"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0, 0, 0, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_1bg7i"]
gradient = SubResource("Gradient_agus2")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rlx3g"]
bg_color = Color(0, 1, 0.701961, 0.196078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.701961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_o3brj"]
bg_color = Color(0, 1, 0.701961, 0.45098)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.701961, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i4xlx"]
bg_color = Color(0, 1, 0.701961, 0.196078)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0, 1, 0.701961, 1)

[node name="MainMenu" type="CanvasLayer"]
script = ExtResource("1_v1vy5")

[node name="Background" type="TextureRect" parent="."]
unique_name_in_owner = true
material = SubResource("ShaderMaterial_jlewn")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("GradientTexture2D_1bg7i")
expand_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_g5dm6")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.08
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Lethe's Eraser Med"
label_settings = ExtResource("5_dt64h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="StartButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_color = Color(0, 1, 0.701961, 1)
theme_override_fonts/font = ExtResource("2_4leyl")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rlx3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3brj")
theme_override_styles/normal = SubResource("StyleBoxFlat_i4xlx")
text = "Start"

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/VBoxContainer/PanelContainer4"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_color = Color(0, 1, 0.701961, 1)
theme_override_fonts/font = ExtResource("2_4leyl")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rlx3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3brj")
theme_override_styles/normal = SubResource("StyleBoxFlat_i4xlx")
text = "Quit
"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.29
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer"]
layout_mode = 2
theme_override_styles/panel = ExtResource("3_o3lbl")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/PanelContainer/PanelContainer"]
layout_mode = 2

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.08
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="Label" type="Label" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Lethe's Eraser Med"
label_settings = ExtResource("5_dt64h")
horizontal_alignment = 1
vertical_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="StartButton" type="Button" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer2"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_color = Color(0, 1, 0.701961, 1)
theme_override_fonts/font = ExtResource("2_4leyl")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rlx3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3brj")
theme_override_styles/normal = SubResource("StyleBoxFlat_i4xlx")
text = "Start"

[node name="PanelContainer4" type="PanelContainer" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="QuitButton" type="Button" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer4"]
custom_minimum_size = Vector2(400, 100)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_hover_pressed_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_hover_color = Color(0, 1, 0.701961, 1)
theme_override_colors/font_color = Color(0, 1, 0.701961, 1)
theme_override_fonts/font = ExtResource("2_4leyl")
theme_override_font_sizes/font_size = 60
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxFlat_rlx3g")
theme_override_styles/hover = SubResource("StyleBoxFlat_o3brj")
theme_override_styles/normal = SubResource("StyleBoxFlat_i4xlx")
text = "Quit
"

[node name="PanelContainer3" type="PanelContainer" parent="MarginContainer/PanelContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 2.29
theme_override_styles/panel = ExtResource("1_fxul4")

[node name="StartButtonSound" type="AudioStreamPlayer" parent="."]
unique_name_in_owner = true
stream = ExtResource("4_piooc")
bus = &"SFX"

[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PanelContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/VBoxContainer/PanelContainer4/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer2/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="MarginContainer/PanelContainer/PanelContainer/VBoxContainer/PanelContainer4/QuitButton" to="." method="_on_quit_button_pressed"]
